Image uploading fix implemented.